# -

minesweeper_github_project/: LICENSE  README.md  main.py  pyproject.toml
minesweeper_github_project/src/minesweeper/: __init__.py  __main__.py  core.py  tk_app.py
minesweeper_github_project/tests/: test_core.py
